//
//  StringResources.swift
//  OnlineShopGB
//
//  Created by Alexey on 25.06.2021.
//

import Foundation

enum StringResources {
    static let baseURL = "https://young-retreat-01631.herokuapp.com/"
    
    static let productAddURL = "product/"
    static let reviewAddURL = "review/"
    static let cartAddURL = "cart/"
    
    static let usernameTextFieldAccessibilityIdentifier = "usernameTextField"
    static let passwordTextFieldAccessibilityIdentifier = "passwordTextField"
    static let signInButtonAccessibilityIdentifier = "signInButton"
}
